// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`about-menu should have a consistent snapshot on mount 1`] = `
<Component
  commitSHA="FCDA123"
  logo={<img />}
  versionNumber="9.0.1-Snapshot"
>
  <div
    className="about-menu"
  >
    <div
      className="about-menu__header"
    >
      <div
        className="about-menu__logo-container"
      >
        <img
          alt="GMS"
          className="about-menu__logo"
          height={120}
          src={<img />}
        />
      </div>
      <div
        className="about-menu__version-container"
      >
        <div
          className="about-menu__title-container"
        >
          <div
            className="about-menu__name"
          >
            GMS
          </div>
          <div
            className="about-menu__version"
          >
            9.0.1-Snapshot
          </div>
        </div>
        <div
          className="about-menu__commit-container"
        >
          <div
            className="about-menu__version-bottom-line"
          >
            <span
              className="about-menu__commit-label"
            >
              Latest Commit:
            </span>
            <span
              className="about-menu__commit"
            >
              FCDA123
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</Component>
`;

exports[`about-menu should have basic props built on render 1`] = `
Object {
  "commitSHA": "FCDA123",
  "logo": <img />,
  "versionNumber": "9.0.1-Snapshot",
}
`;

exports[`app-menu should have a consistent snapshot on mount 1`] = `
<Component
  clearLayout={[MockFunction]}
  components={
    Map {
      "Analyst" => Map {
        "waveform-display" => Object {
          "id": Object {
            "component": "waveform-display",
            "title": "Waveforms",
            "type": "react-component",
          },
          "value": undefined,
        },
      },
      "Data Acquisition" => Map {
        "soh-overview" => Object {
          "id": Object {
            "component": "soh-overview",
            "title": "SOH Overview",
            "type": "react-component",
          },
          "value": undefined,
        },
      },
    }
  }
  getOpenDisplays={[Function]}
  logout={[MockFunction]}
  openDisplay={[MockFunction]}
  openLayoutName=""
  openWorkspace={[MockFunction]}
  saveWorkspaceAs={[MockFunction]}
  showAboutDialog={[MockFunction]}
  showLogs={[MockFunction]}
  userProfile={
    Object {
      "audibleNotifications": Array [],
      "defaultLayoutName": "default",
      "id": "id",
      "userId": "1",
      "workspaceLayouts": Array [
        Object {
          "layoutConfiguration": "test",
          "name": "default",
          "supportedUserInterfaceModes": Array [
            "ANALYST",
          ],
        },
      ],
    }
  }
>
  <Blueprint3.Menu>
    <ul
      className="bp3-menu"
    >
      <Blueprint3.MenuItem
        className="app-menu__about"
        disabled={false}
        icon="info-sign"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="About"
        title="Shows GMS system version info"
      >
        <li
          className=""
        >
          <a
            className="bp3-menu-item bp3-popover-dismiss app-menu__about"
            onClick={[Function]}
            title="Shows GMS system version info"
          >
            <Blueprint3.Icon
              icon="info-sign"
            >
              <span
                className="bp3-icon bp3-icon-info-sign"
                icon="info-sign"
              >
                <svg
                  data-icon="info-sign"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    info-sign
                  </desc>
                  <path
                    d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
                    fillRule="evenodd"
                    key="0"
                  />
                </svg>
              </span>
            </Blueprint3.Icon>
            <Blueprint3.Text
              className="bp3-fill"
              ellipsize={true}
            >
              <div
                className="bp3-text-overflow-ellipsis bp3-fill"
              >
                About
              </div>
            </Blueprint3.Text>
          </a>
        </li>
      </Blueprint3.MenuItem>
      <Blueprint3.MenuDivider
        className="menu-title"
        key="Workspace"
        title="Workspace"
      >
        <li
          className="bp3-menu-header menu-title"
        >
          <Component>
            <h6
              className="bp3-heading"
            >
              Workspace
            </h6>
          </Component>
        </li>
      </Blueprint3.MenuDivider>
      <Blueprint3.MenuItem
        className="app-menu__open-workspace"
        disabled={false}
        icon="folder-open"
        multiline={false}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Open Workspace"
        title="Opens a previously saved workspace"
      >
        <li
          className="bp3-submenu"
        >
          <Blueprint3.Popover
            autoFocus={false}
            boundary="scrollParent"
            captureDismiss={false}
            content={
              <Blueprint3.Menu>
                <Blueprint3.MenuItem
                  className="unopened-layout"
                  disabled={false}
                  icon={null}
                  multiline={false}
                  onClick={[Function]}
                  popoverProps={Object {}}
                  shouldDismissPopover={true}
                  text="default (default)"
                />
              </Blueprint3.Menu>
            }
            defaultIsOpen={false}
            disabled={false}
            enforceFocus={false}
            fill={false}
            hasBackdrop={false}
            hoverCloseDelay={0}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="hover"
            minimal={true}
            modifiers={
              Object {
                "flip": Object {
                  "boundariesElement": "viewport",
                  "padding": 20,
                },
                "offset": Object {
                  "offset": -5,
                },
                "preventOverflow": Object {
                  "boundariesElement": "viewport",
                  "padding": 20,
                },
              }
            }
            openOnTargetFocus={true}
            popoverClassName="bp3-submenu"
            position="right-top"
            target={
              <a
                className="bp3-menu-item app-menu__open-workspace"
                title="Opens a previously saved workspace"
              >
                <Blueprint3.Icon
                  icon="folder-open"
                />
                <Blueprint3.Text
                  className="bp3-fill"
                  ellipsize={true}
                >
                  Open Workspace
                </Blueprint3.Text>
                <Blueprint3.Icon
                  icon="caret-right"
                />
              </a>
            }
            targetTagName="span"
            transitionDuration={300}
            usePortal={false}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <a
                          className="bp3-menu-item app-menu__open-workspace"
                          tabIndex={0}
                          title="Opens a previously saved workspace"
                        >
                          <Blueprint3.Icon
                            icon="folder-open"
                          >
                            <span
                              className="bp3-icon bp3-icon-folder-open"
                              icon="folder-open"
                            >
                              <svg
                                data-icon="folder-open"
                                height={16}
                                viewBox="0 0 16 16"
                                width={16}
                              >
                                <desc>
                                  folder-open
                                </desc>
                                <path
                                  d="M2.06 6.69c.14-.4.5-.69.94-.69h11V5c0-.55-.45-1-1-1H6.41l-1.7-1.71A.997.997 0 004 2H1c-.55 0-1 .45-1 1v9.84l2.05-6.15h.01zM16 8c0-.55-.45-1-1-1H4a.99.99 0 00-.94.69l-2 6c-.04.09-.06.2-.06.31 0 .55.45 1 1 1h11c.44 0 .81-.29.94-.69l2-6c.04-.09.06-.2.06-.31z"
                                  fillRule="evenodd"
                                  key="0"
                                />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                          <Blueprint3.Text
                            className="bp3-fill"
                            ellipsize={true}
                          >
                            <div
                              className="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Open Workspace
                            </div>
                          </Blueprint3.Text>
                          <Blueprint3.Icon
                            icon="caret-right"
                          >
                            <span
                              className="bp3-icon bp3-icon-caret-right"
                              icon="caret-right"
                            >
                              <svg
                                data-icon="caret-right"
                                height={16}
                                viewBox="0 0 16 16"
                                width={16}
                              >
                                <desc>
                                  caret-right
                                </desc>
                                <path
                                  d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
                                  fillRule="evenodd"
                                  key="0"
                                />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                        </a>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={false}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={false}
                  enforceFocus={false}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={false}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </li>
      </Blueprint3.MenuItem>
      <Blueprint3.MenuItem
        className="app-menu__save-as"
        disabled={false}
        icon="floppy-disk"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Save Workspace As"
        title="Save your current workspace layout as a new layout"
      >
        <li
          className=""
        >
          <a
            className="bp3-menu-item bp3-popover-dismiss app-menu__save-as"
            onClick={[Function]}
            title="Save your current workspace layout as a new layout"
          >
            <Blueprint3.Icon
              icon="floppy-disk"
            >
              <span
                className="bp3-icon bp3-icon-floppy-disk"
                icon="floppy-disk"
              >
                <svg
                  data-icon="floppy-disk"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    floppy-disk
                  </desc>
                  <path
                    d="M15.71 2.29l-2-2A.997.997 0 0013 0h-1v6H4V0H1C.45 0 0 .45 0 1v14c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V3c0-.28-.11-.53-.29-.71zM14 15H2V9c0-.55.45-1 1-1h10c.55 0 1 .45 1 1v6zM11 1H9v4h2V1z"
                    fillRule="evenodd"
                    key="0"
                  />
                </svg>
              </span>
            </Blueprint3.Icon>
            <Blueprint3.Text
              className="bp3-fill"
              ellipsize={true}
            >
              <div
                className="bp3-text-overflow-ellipsis bp3-fill"
              >
                Save Workspace As
              </div>
            </Blueprint3.Text>
          </a>
        </li>
      </Blueprint3.MenuItem>
      <Blueprint3.MenuDivider
        className="menu-title"
        key="Displays"
        title="Displays"
      >
        <li
          className="bp3-menu-header menu-title"
        >
          <Component>
            <h6
              className="bp3-heading"
            >
              Displays
            </h6>
          </Component>
        </li>
      </Blueprint3.MenuDivider>
      <Blueprint3.MenuItem
        disabled={false}
        icon="desktop"
        key="Analyst"
        multiline={false}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Analyst"
      >
        <li
          className="bp3-submenu"
        >
          <Blueprint3.Popover
            autoFocus={false}
            boundary="scrollParent"
            captureDismiss={false}
            content={
              <Blueprint3.Menu>
                <Blueprint3.MenuItem
                  disabled={false}
                  multiline={false}
                  onClick={[Function]}
                  popoverProps={Object {}}
                  shouldDismissPopover={true}
                  text="Waveforms"
                />
              </Blueprint3.Menu>
            }
            defaultIsOpen={false}
            disabled={false}
            enforceFocus={false}
            fill={false}
            hasBackdrop={false}
            hoverCloseDelay={0}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="hover"
            minimal={true}
            modifiers={
              Object {
                "flip": Object {
                  "boundariesElement": "viewport",
                  "padding": 20,
                },
                "offset": Object {
                  "offset": -5,
                },
                "preventOverflow": Object {
                  "boundariesElement": "viewport",
                  "padding": 20,
                },
              }
            }
            openOnTargetFocus={true}
            popoverClassName="bp3-submenu"
            position="right-top"
            target={
              <a
                className="bp3-menu-item"
              >
                <Blueprint3.Icon
                  icon="desktop"
                />
                <Blueprint3.Text
                  className="bp3-fill"
                  ellipsize={true}
                >
                  Analyst
                </Blueprint3.Text>
                <Blueprint3.Icon
                  icon="caret-right"
                />
              </a>
            }
            targetTagName="span"
            transitionDuration={300}
            usePortal={false}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <a
                          className="bp3-menu-item"
                          tabIndex={0}
                        >
                          <Blueprint3.Icon
                            icon="desktop"
                          >
                            <span
                              className="bp3-icon bp3-icon-desktop"
                              icon="desktop"
                            >
                              <svg
                                data-icon="desktop"
                                height={16}
                                viewBox="0 0 16 16"
                                width={16}
                              >
                                <desc>
                                  desktop
                                </desc>
                                <path
                                  d="M15 0H1C.45 0 0 .45 0 1v10c0 .55.45 1 1 1h4.75l-.5 2H4c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1s-.45-1-1-1h-1.25l-.5-2H15c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-1 10H2V2h12v8z"
                                  fillRule="evenodd"
                                  key="0"
                                />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                          <Blueprint3.Text
                            className="bp3-fill"
                            ellipsize={true}
                          >
                            <div
                              className="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Analyst
                            </div>
                          </Blueprint3.Text>
                          <Blueprint3.Icon
                            icon="caret-right"
                          >
                            <span
                              className="bp3-icon bp3-icon-caret-right"
                              icon="caret-right"
                            >
                              <svg
                                data-icon="caret-right"
                                height={16}
                                viewBox="0 0 16 16"
                                width={16}
                              >
                                <desc>
                                  caret-right
                                </desc>
                                <path
                                  d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
                                  fillRule="evenodd"
                                  key="0"
                                />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                        </a>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={false}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={false}
                  enforceFocus={false}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={false}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </li>
      </Blueprint3.MenuItem>
      <Blueprint3.MenuItem
        disabled={false}
        icon="desktop"
        key="Data Acquisition"
        multiline={false}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Data Acquisition"
      >
        <li
          className="bp3-submenu"
        >
          <Blueprint3.Popover
            autoFocus={false}
            boundary="scrollParent"
            captureDismiss={false}
            content={
              <Blueprint3.Menu>
                <Blueprint3.MenuItem
                  disabled={false}
                  multiline={false}
                  onClick={[Function]}
                  popoverProps={Object {}}
                  shouldDismissPopover={true}
                  text="SOH Overview"
                />
              </Blueprint3.Menu>
            }
            defaultIsOpen={false}
            disabled={false}
            enforceFocus={false}
            fill={false}
            hasBackdrop={false}
            hoverCloseDelay={0}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="hover"
            minimal={true}
            modifiers={
              Object {
                "flip": Object {
                  "boundariesElement": "viewport",
                  "padding": 20,
                },
                "offset": Object {
                  "offset": -5,
                },
                "preventOverflow": Object {
                  "boundariesElement": "viewport",
                  "padding": 20,
                },
              }
            }
            openOnTargetFocus={true}
            popoverClassName="bp3-submenu"
            position="right-top"
            target={
              <a
                className="bp3-menu-item"
              >
                <Blueprint3.Icon
                  icon="desktop"
                />
                <Blueprint3.Text
                  className="bp3-fill"
                  ellipsize={true}
                >
                  Data Acquisition
                </Blueprint3.Text>
                <Blueprint3.Icon
                  icon="caret-right"
                />
              </a>
            }
            targetTagName="span"
            transitionDuration={300}
            usePortal={false}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <a
                          className="bp3-menu-item"
                          tabIndex={0}
                        >
                          <Blueprint3.Icon
                            icon="desktop"
                          >
                            <span
                              className="bp3-icon bp3-icon-desktop"
                              icon="desktop"
                            >
                              <svg
                                data-icon="desktop"
                                height={16}
                                viewBox="0 0 16 16"
                                width={16}
                              >
                                <desc>
                                  desktop
                                </desc>
                                <path
                                  d="M15 0H1C.45 0 0 .45 0 1v10c0 .55.45 1 1 1h4.75l-.5 2H4c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1s-.45-1-1-1h-1.25l-.5-2H15c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-1 10H2V2h12v8z"
                                  fillRule="evenodd"
                                  key="0"
                                />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                          <Blueprint3.Text
                            className="bp3-fill"
                            ellipsize={true}
                          >
                            <div
                              className="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Data Acquisition
                            </div>
                          </Blueprint3.Text>
                          <Blueprint3.Icon
                            icon="caret-right"
                          >
                            <span
                              className="bp3-icon bp3-icon-caret-right"
                              icon="caret-right"
                            >
                              <svg
                                data-icon="caret-right"
                                height={16}
                                viewBox="0 0 16 16"
                                width={16}
                              >
                                <desc>
                                  caret-right
                                </desc>
                                <path
                                  d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
                                  fillRule="evenodd"
                                  key="0"
                                />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                        </a>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={false}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={false}
                  enforceFocus={false}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={false}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </li>
      </Blueprint3.MenuItem>
      <Blueprint3.MenuDivider>
        <li
          className="bp3-menu-divider"
        />
      </Blueprint3.MenuDivider>
      <Blueprint3.MenuItem
        disabled={false}
        icon="wrench"
        multiline={false}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Developer Tools"
        title="Shows advanced debugging tools"
      >
        <li
          className="bp3-submenu"
        >
          <Blueprint3.Popover
            autoFocus={false}
            boundary="scrollParent"
            captureDismiss={false}
            content={
              <Blueprint3.Menu>
                <Blueprint3.MenuItem
                  className="app-menu__logs"
                  disabled={false}
                  multiline={false}
                  onClick={[Function]}
                  popoverProps={Object {}}
                  shouldDismissPopover={true}
                  text="Logs"
                  title="Shows logs between UI and API Gateway"
                />
                <Blueprint3.MenuItem
                  className="app-menu__clear-layout"
                  disabled={false}
                  multiline={false}
                  onClick={[Function]}
                  popoverProps={Object {}}
                  shouldDismissPopover={true}
                  text="Clear Layout"
                  title="Clears local golden layout configuration and replaces with pre-configured default"
                />
              </Blueprint3.Menu>
            }
            defaultIsOpen={false}
            disabled={false}
            enforceFocus={false}
            fill={false}
            hasBackdrop={false}
            hoverCloseDelay={0}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="hover"
            minimal={true}
            modifiers={
              Object {
                "flip": Object {
                  "boundariesElement": "viewport",
                  "padding": 20,
                },
                "offset": Object {
                  "offset": -5,
                },
                "preventOverflow": Object {
                  "boundariesElement": "viewport",
                  "padding": 20,
                },
              }
            }
            openOnTargetFocus={true}
            popoverClassName="bp3-submenu"
            position="right-top"
            target={
              <a
                className="bp3-menu-item"
                title="Shows advanced debugging tools"
              >
                <Blueprint3.Icon
                  icon="wrench"
                />
                <Blueprint3.Text
                  className="bp3-fill"
                  ellipsize={true}
                >
                  Developer Tools
                </Blueprint3.Text>
                <Blueprint3.Icon
                  icon="caret-right"
                />
              </a>
            }
            targetTagName="span"
            transitionDuration={300}
            usePortal={false}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <a
                          className="bp3-menu-item"
                          tabIndex={0}
                          title="Shows advanced debugging tools"
                        >
                          <Blueprint3.Icon
                            icon="wrench"
                          >
                            <span
                              className="bp3-icon bp3-icon-wrench"
                              icon="wrench"
                            >
                              <svg
                                data-icon="wrench"
                                height={16}
                                viewBox="0 0 16 16"
                                width={16}
                              >
                                <desc>
                                  wrench
                                </desc>
                                <path
                                  d="M15.83 3.7l-3.06 3.05-2.84-.7-.7-2.83L12.29.17a5.004 5.004 0 00-4.83 1.29 4.967 4.967 0 00-1.12 5.36L.58 12.58c-.36.36-.58.86-.58 1.41 0 1.1.9 2 2 2 .55 0 1.05-.22 1.41-.59l5.77-5.77c1.79.69 3.91.33 5.35-1.12 1.32-1.3 1.74-3.15 1.3-4.81z"
                                  fillRule="evenodd"
                                  key="0"
                                />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                          <Blueprint3.Text
                            className="bp3-fill"
                            ellipsize={true}
                          >
                            <div
                              className="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Developer Tools
                            </div>
                          </Blueprint3.Text>
                          <Blueprint3.Icon
                            icon="caret-right"
                          >
                            <span
                              className="bp3-icon bp3-icon-caret-right"
                              icon="caret-right"
                            >
                              <svg
                                data-icon="caret-right"
                                height={16}
                                viewBox="0 0 16 16"
                                width={16}
                              >
                                <desc>
                                  caret-right
                                </desc>
                                <path
                                  d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
                                  fillRule="evenodd"
                                  key="0"
                                />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                        </a>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={false}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={false}
                  enforceFocus={false}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={false}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </li>
      </Blueprint3.MenuItem>
      <Blueprint3.MenuDivider>
        <li
          className="bp3-menu-divider"
        />
      </Blueprint3.MenuDivider>
      <Blueprint3.MenuItem
        className="app-menu__logout"
        disabled={false}
        icon="log-out"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Log out"
      >
        <li
          className=""
        >
          <a
            className="bp3-menu-item bp3-popover-dismiss app-menu__logout"
            onClick={[Function]}
          >
            <Blueprint3.Icon
              icon="log-out"
            >
              <span
                className="bp3-icon bp3-icon-log-out"
                icon="log-out"
              >
                <svg
                  data-icon="log-out"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    log-out
                  </desc>
                  <path
                    d="M7 14H2V2h5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v14c0 .55.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1zm8.71-6.71l-3-3a1.003 1.003 0 00-1.42 1.42L12.59 7H6c-.55 0-1 .45-1 1s.45 1 1 1h6.59l-1.29 1.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3-3c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fillRule="evenodd"
                    key="0"
                  />
                </svg>
              </span>
            </Blueprint3.Icon>
            <Blueprint3.Text
              className="bp3-fill"
              ellipsize={true}
            >
              <div
                className="bp3-text-overflow-ellipsis bp3-fill"
              >
                Log out
              </div>
            </Blueprint3.Text>
          </a>
        </li>
      </Blueprint3.MenuItem>
    </ul>
  </Blueprint3.Menu>
</Component>
`;

exports[`app-menu should have basic props built on render 1`] = `
Object {
  "clearLayout": [MockFunction],
  "components": Map {
    "Analyst" => Map {
      "waveform-display" => Object {
        "id": Object {
          "component": "waveform-display",
          "title": "Waveforms",
          "type": "react-component",
        },
        "value": undefined,
      },
    },
    "Data Acquisition" => Map {
      "soh-overview" => Object {
        "id": Object {
          "component": "soh-overview",
          "title": "SOH Overview",
          "type": "react-component",
        },
        "value": undefined,
      },
    },
  },
  "getOpenDisplays": [Function],
  "logo": undefined,
  "logout": [MockFunction],
  "openDisplay": [MockFunction],
  "openLayoutName": "",
  "openWorkspace": [MockFunction],
  "saveWorkspaceAs": [MockFunction],
  "showAboutDialog": [MockFunction],
  "showLogs": [MockFunction],
  "userProfile": Object {
    "audibleNotifications": Array [],
    "defaultLayoutName": "default",
    "id": "id",
    "userId": "1",
    "workspaceLayouts": Array [
      Object {
        "layoutConfiguration": "test",
        "name": "default",
        "supportedUserInterfaceModes": Array [
          "ANALYST",
        ],
      },
    ],
  },
}
`;

exports[`app-toolbar should have a consistent snapshot on mount 1`] = `
<Component
  clearLayout={[Function]}
  components={
    Map {
      "Analyst" => Map {
        "waveform-display" => Object {
          "id": Object {
            "component": "waveform-display",
            "title": "Waveforms",
            "type": "react-component",
          },
          "value": undefined,
        },
      },
      "Data Acquisition" => Map {
        "soh-overview" => Object {
          "id": Object {
            "component": "soh-overview",
            "title": "SOH Overview",
            "type": "react-component",
          },
          "value": undefined,
        },
      },
    }
  }
  getOpenDisplays={[Function]}
  isAboutDialogOpen={true}
  isSaveWorkspaceAsDialogOpen={false}
  logo={<img />}
  logout={[Function]}
  openDisplay={[Function]}
  openLayoutName=""
  openWorkspace={[Function]}
  showAboutDialog={[Function]}
  showLogPopup={[Function]}
  userName="Test User"
  userProfile={
    Object {
      "audibleNotifications": Array [],
      "defaultLayoutName": "default",
      "id": "id",
      "userId": "1",
      "workspaceLayouts": Array [
        Object {
          "layoutConfiguration": "test",
          "name": "default",
          "supportedUserInterfaceModes": Array [
            "ANALYST",
          ],
        },
      ],
    }
  }
  versionInfo={
    Object {
      "commitSHA": "2",
      "versionNumber": "1",
    }
  }
>
  <nav
    className="bp3-navbar workspace-navbar"
  >
    <div
      className="workspace-navbar__image-label"
    >
      <img
        alt="GMS Logo"
        className="workspace-logo"
        height={33}
        src={<img />}
        width={35}
      />
      <span
        className="workspace-logo__label"
        onAnimationEnd={[Function]}
      >
        GMS
      </span>
    </div>
    <Blueprint3.Popover
      boundary="scrollParent"
      captureDismiss={false}
      content={
        <Unknown
          clearLayout={[Function]}
          components={
            Map {
              "Analyst" => Map {
                "waveform-display" => Object {
                  "id": Object {
                    "component": "waveform-display",
                    "title": "Waveforms",
                    "type": "react-component",
                  },
                  "value": undefined,
                },
              },
              "Data Acquisition" => Map {
                "soh-overview" => Object {
                  "id": Object {
                    "component": "soh-overview",
                    "title": "SOH Overview",
                    "type": "react-component",
                  },
                  "value": undefined,
                },
              },
            }
          }
          getOpenDisplays={[Function]}
          logo={<img />}
          logout={[Function]}
          openDisplay={[Function]}
          openLayoutName=""
          openWorkspace={[Function]}
          showAboutDialog={[Function]}
          showLogs={[Function]}
          userProfile={
            Object {
              "audibleNotifications": Array [],
              "defaultLayoutName": "default",
              "id": "id",
              "userId": "1",
              "workspaceLayouts": Array [
                Object {
                  "layoutConfiguration": "test",
                  "name": "default",
                  "supportedUserInterfaceModes": Array [
                    "ANALYST",
                  ],
                },
              ],
            }
          }
        />
      }
      defaultIsOpen={false}
      disabled={false}
      fill={false}
      hasBackdrop={false}
      hoverCloseDelay={300}
      hoverOpenDelay={150}
      inheritDarkTheme={true}
      interactionKind="click"
      minimal={false}
      modifiers={Object {}}
      openOnTargetFocus={true}
      position="auto"
      targetTagName="span"
      transitionDuration={300}
      usePortal={true}
      wrapperTagName="span"
    >
      <Manager>
        <span
          className="bp3-popover-wrapper"
        >
          <Reference
            innerRef={[Function]}
          >
            <InnerReference
              innerRef={[Function]}
              setReferenceNode={[Function]}
            >
              <Blueprint3.ResizeSensor
                onResize={[Function]}
              >
                <span
                  className="bp3-popover-target"
                  onClick={[Function]}
                >
                  <Blueprint3.Button
                    className="app-menu-button"
                    data-cy="username"
                    key=".0"
                    minimal={true}
                    rightIcon="user"
                    text="Test User"
                  >
                    <button
                      className="bp3-button bp3-minimal app-menu-button"
                      data-cy="username"
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      type="button"
                    >
                      <Blueprint3.Icon
                        key="leftIcon"
                      />
                      <span
                        className="bp3-button-text"
                        key="text"
                      >
                        Test User
                      </span>
                      <Blueprint3.Icon
                        icon="user"
                        key="rightIcon"
                      >
                        <span
                          className="bp3-icon bp3-icon-user"
                          icon="user"
                        >
                          <svg
                            data-icon="user"
                            height={16}
                            viewBox="0 0 16 16"
                            width={16}
                          >
                            <desc>
                              user
                            </desc>
                            <path
                              d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                              fillRule="evenodd"
                              key="0"
                            />
                          </svg>
                        </span>
                      </Blueprint3.Icon>
                    </button>
                  </Blueprint3.Button>
                </span>
              </Blueprint3.ResizeSensor>
            </InnerReference>
          </Reference>
          <Blueprint3.Overlay
            autoFocus={true}
            backdropClassName="bp3-popover-backdrop"
            backdropProps={Object {}}
            canEscapeKeyClose={true}
            canOutsideClickClose={true}
            enforceFocus={true}
            hasBackdrop={false}
            isOpen={false}
            lazy={true}
            onClose={[Function]}
            transitionDuration={300}
            transitionName="bp3-popover"
            usePortal={true}
          />
        </span>
      </Manager>
    </Blueprint3.Popover>
    <Blueprint3.Dialog
      canOutsideClickClose={true}
      className="bp3-dark"
      isOpen={true}
      onClose={[Function]}
      title="About"
    >
      <Blueprint3.Overlay
        autoFocus={true}
        backdropProps={Object {}}
        canEscapeKeyClose={true}
        canOutsideClickClose={true}
        className="bp3-overlay-scroll-container"
        enforceFocus={true}
        hasBackdrop={true}
        isOpen={true}
        lazy={true}
        onClose={[Function]}
        title="About"
        transitionDuration={300}
        transitionName="bp3-overlay"
        usePortal={true}
      >
        <Blueprint3.Portal
          container={
            <body
              class="bp3-overlay-open"
            >
              <div />
              <div
                class="bp3-portal"
              >
                <div
                  class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
                >
                  <div
                    class="bp3-overlay-backdrop bp3-overlay-appear bp3-overlay-appear-active"
                    tabindex="0"
                  />
                  <div
                    class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear bp3-overlay-appear-active"
                    tabindex="0"
                  >
                    <div
                      class="bp3-dialog bp3-dark"
                    >
                      <div
                        class="bp3-dialog-header"
                      >
                        <h4
                          class="bp3-heading"
                        >
                          About
                        </h4>
                        <button
                          aria-label="Close"
                          class="bp3-button bp3-minimal bp3-dialog-close-button"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                      <div
                        class="about-menu"
                      >
                        <div
                          class="about-menu__header"
                        >
                          <div
                            class="about-menu__logo-container"
                          >
                            <img
                              alt="GMS"
                              class="about-menu__logo"
                              height="120"
                              src="[object HTMLImageElement]"
                            />
                          </div>
                          <div
                            class="about-menu__version-container"
                          >
                            <div
                              class="about-menu__title-container"
                            >
                              <div
                                class="about-menu__name"
                              >
                                GMS
                              </div>
                              <div
                                class="about-menu__version"
                              >
                                1
                              </div>
                            </div>
                            <div
                              class="about-menu__commit-container"
                            >
                              <div
                                class="about-menu__version-bottom-line"
                              >
                                <span
                                  class="about-menu__commit-label"
                                >
                                  Latest Commit:
                                </span>
                                <span
                                  class="about-menu__commit"
                                >
                                  2
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
        >
          <Portal
            containerInfo={
              <div
                class="bp3-portal"
              >
                <div
                  class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
                >
                  <div
                    class="bp3-overlay-backdrop bp3-overlay-appear bp3-overlay-appear-active"
                    tabindex="0"
                  />
                  <div
                    class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear bp3-overlay-appear-active"
                    tabindex="0"
                  >
                    <div
                      class="bp3-dialog bp3-dark"
                    >
                      <div
                        class="bp3-dialog-header"
                      >
                        <h4
                          class="bp3-heading"
                        >
                          About
                        </h4>
                        <button
                          aria-label="Close"
                          class="bp3-button bp3-minimal bp3-dialog-close-button"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                      <div
                        class="about-menu"
                      >
                        <div
                          class="about-menu__header"
                        >
                          <div
                            class="about-menu__logo-container"
                          >
                            <img
                              alt="GMS"
                              class="about-menu__logo"
                              height="120"
                              src="[object HTMLImageElement]"
                            />
                          </div>
                          <div
                            class="about-menu__version-container"
                          >
                            <div
                              class="about-menu__title-container"
                            >
                              <div
                                class="about-menu__name"
                              >
                                GMS
                              </div>
                              <div
                                class="about-menu__version"
                              >
                                1
                              </div>
                            </div>
                            <div
                              class="about-menu__commit-container"
                            >
                              <div
                                class="about-menu__version-bottom-line"
                              >
                                <span
                                  class="about-menu__commit-label"
                                >
                                  Latest Commit:
                                </span>
                                <span
                                  class="about-menu__commit"
                                >
                                  2
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <TransitionGroup
              appear={true}
              childFactory={[Function]}
              className="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
              component="div"
              onKeyDown={[Function]}
            >
              <div
                className="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
                onKeyDown={[Function]}
              >
                <CSSTransition
                  appear={true}
                  classNames="bp3-overlay"
                  in={true}
                  key=".$__backdrop"
                  onExited={[Function]}
                  timeout={300}
                >
                  <Transition
                    appear={true}
                    enter={true}
                    exit={true}
                    in={true}
                    mountOnEnter={false}
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={300}
                    unmountOnExit={false}
                  >
                    <div
                      className="bp3-overlay-backdrop"
                      onMouseDown={[Function]}
                      tabIndex={0}
                    />
                  </Transition>
                </CSSTransition>
                <CSSTransition
                  appear={true}
                  classNames="bp3-overlay"
                  in={true}
                  key=".$.0"
                  onExited={[Function]}
                  timeout={300}
                >
                  <Transition
                    appear={true}
                    enter={true}
                    exit={true}
                    in={true}
                    mountOnEnter={false}
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={300}
                    unmountOnExit={false}
                  >
                    <div
                      className="bp3-dialog-container bp3-overlay-content"
                      tabIndex={0}
                    >
                      <div
                        className="bp3-dialog bp3-dark"
                      >
                        <div
                          className="bp3-dialog-header"
                        >
                          <Blueprint3.Icon
                            iconSize={20}
                          />
                          <Component>
                            <h4
                              className="bp3-heading"
                            >
                              About
                            </h4>
                          </Component>
                          <Blueprint3.Button
                            aria-label="Close"
                            className="bp3-dialog-close-button"
                            icon={
                              <Blueprint3.Icon
                                icon="small-cross"
                                iconSize={20}
                              />
                            }
                            minimal={true}
                            onClick={[Function]}
                          >
                            <button
                              aria-label="Close"
                              className="bp3-button bp3-minimal bp3-dialog-close-button"
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              type="button"
                            >
                              <Blueprint3.Icon
                                icon={
                                  <Blueprint3.Icon
                                    icon="small-cross"
                                    iconSize={20}
                                  />
                                }
                                key="leftIcon"
                              >
                                <Blueprint3.Icon
                                  icon="small-cross"
                                  iconSize={20}
                                >
                                  <span
                                    className="bp3-icon bp3-icon-small-cross"
                                    icon="small-cross"
                                  >
                                    <svg
                                      data-icon="small-cross"
                                      height={20}
                                      viewBox="0 0 20 20"
                                      width={20}
                                    >
                                      <desc>
                                        small-cross
                                      </desc>
                                      <path
                                        d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                                        fillRule="evenodd"
                                        key="0"
                                      />
                                    </svg>
                                  </span>
                                </Blueprint3.Icon>
                              </Blueprint3.Icon>
                              <Blueprint3.Icon
                                key="rightIcon"
                              />
                            </button>
                          </Blueprint3.Button>
                        </div>
                        <Component
                          commitSHA="2"
                          logo={<img />}
                          versionNumber="1"
                        >
                          <div
                            className="about-menu"
                          >
                            <div
                              className="about-menu__header"
                            >
                              <div
                                className="about-menu__logo-container"
                              >
                                <img
                                  alt="GMS"
                                  className="about-menu__logo"
                                  height={120}
                                  src={<img />}
                                />
                              </div>
                              <div
                                className="about-menu__version-container"
                              >
                                <div
                                  className="about-menu__title-container"
                                >
                                  <div
                                    className="about-menu__name"
                                  >
                                    GMS
                                  </div>
                                  <div
                                    className="about-menu__version"
                                  >
                                    1
                                  </div>
                                </div>
                                <div
                                  className="about-menu__commit-container"
                                >
                                  <div
                                    className="about-menu__version-bottom-line"
                                  >
                                    <span
                                      className="about-menu__commit-label"
                                    >
                                      Latest Commit:
                                    </span>
                                    <span
                                      className="about-menu__commit"
                                    >
                                      2
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </Component>
                      </div>
                    </div>
                  </Transition>
                </CSSTransition>
              </div>
            </TransitionGroup>
          </Portal>
        </Blueprint3.Portal>
      </Blueprint3.Overlay>
    </Blueprint3.Dialog>
  </nav>
</Component>
`;

exports[`app-toolbar should have basic props built on render 1`] = `
Object {
  "clearLayout": [Function],
  "components": Map {
    "Analyst" => Map {
      "waveform-display" => Object {
        "id": Object {
          "component": "waveform-display",
          "title": "Waveforms",
          "type": "react-component",
        },
        "value": undefined,
      },
    },
    "Data Acquisition" => Map {
      "soh-overview" => Object {
        "id": Object {
          "component": "soh-overview",
          "title": "SOH Overview",
          "type": "react-component",
        },
        "value": undefined,
      },
    },
  },
  "getOpenDisplays": [Function],
  "isAboutDialogOpen": true,
  "isSaveWorkspaceAsDialogOpen": false,
  "logo": <img />,
  "logout": [Function],
  "openDisplay": [Function],
  "openLayoutName": "",
  "openWorkspace": [Function],
  "saveDialog": undefined,
  "setLayout": undefined,
  "setOpenLayoutName": undefined,
  "showAboutDialog": [Function],
  "showLogPopup": [Function],
  "toggleSaveWorkspaceAsDialog": undefined,
  "userName": "Test User",
  "userProfile": Object {
    "audibleNotifications": Array [],
    "defaultLayoutName": "default",
    "id": "id",
    "userId": "1",
    "workspaceLayouts": Array [
      Object {
        "layoutConfiguration": "test",
        "name": "default",
        "supportedUserInterfaceModes": Array [
          "ANALYST",
        ],
      },
    ],
  },
  "versionInfo": Object {
    "commitSHA": "2",
    "versionNumber": "1",
  },
}
`;
